--- a/hw-03-03.html
+++ b/hw-03-03.html
@@ -10,16 +10,19 @@
 </head>
 <body>
     <header>
-        <img src="image/netflix-logo-png-2562 1.png" alt="logo">
+        <div class="header-left">
+        <img src="image/netflix-logo-png-2562 1.png" class="logo" alt="logo">
         <p class="date">
             Friday July 8th
-        </p>
+        </p> 
+        </div>
+        <div class="header-right">
         <h2>
-            <i class="fa-solid fa-magnifying-glass"></i>
-        </h2>
-                 
-        <img src="" alt="">
-    </header>
+        <i class="fa-solid fa-magnifying-glass"></i>
+        </h2>                 
+        <img src="image/Ellipse 2.png" class="avatar" alt="avatar">
+        </div>
+        </header>
 
     <section class="description">
     <h3>
